# BokiEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  README.md
include/: Engine.h  Shader.h
include/glad/: glad.h
shaders/: fragment.glsl
src/: Engine.cpp  Shader.cpp  glad.c  main.cpp
